fix: more dark mode tweaks, including for editor text
Fixes #554

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -673,7 +673,6 @@ sidecar {
     min-width: 0;
     transition: all 300ms ease-in-out;
     box-shadow: 0 0 1ex var(--color-ui-02);
-    font-weight: 300;
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
@@ -1158,8 +1157,8 @@ sidecar.no-limits-data .activation-estimated-cost-container {
 pre, code {
     font-family: var(--font-monospace);
 }
-code.fancy-code {
-    background: var(--color-ui-01);
+code.fancy-code, code.fancy-code.hljs {
+    background: var(--color-ui-01) !important;
     border: 1px solid var(--color-ui-04);
 }
 .no-wrap {
